# python_libraries_examples

./: PYTHON_UV_COMMANDS_CHEAT_SHEET.md  README.md
.github/: copilot-instructions.md
FastAPI/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
FastAPI/examples/: client_demo.py  demo_usage.py
FastAPI/tests/: conftest.py  test_main.py
